--- a/client/src/Components/studentcard/Card.css
+++ b/client/src/Components/studentcard/Card.css
@@ -6,8 +6,8 @@ html{height: 100%; position: relative;}
 #clear{clear: both;}
 
 .card{
-  width: 450px;
-  height: 260px;
+  width: 500px;
+  height: 290px;
   position: relative;
   overflow: hidden;
   background: #FFF;
@@ -19,10 +19,10 @@ html{height: 100%; position: relative;}
   content: "";
   width: 100%;
   height: 200%;
-  background-color: #272731;
+  background-color: #21212e;
   position: absolute;
   transform: rotate(30deg);
-  left: -180px;
+  left: -200px;
   top: -200px;
 }
 
@@ -105,7 +105,7 @@ html{height: 100%; position: relative;}
 
 #info{
   float: right;
-  margin: 140px 0 0 0;
+  margin: 120px 0 0 0;
   font-size: 0.94em;
 }
 
